--- a/README.rdoc
+++ b/README.rdoc
@@ -1,5 +1,5 @@
 == Git-bro
-Git-bro[http://github.com/kolo/git-bro] is a server for your Git repositories. Git-bro is build on top of Sinatra[http://www.sinatrarb.com/] framework.
+{Git-bro}[http://github.com/kolo/git-bro] is a server for your Git repositories. Git-bro is build on top of {Sinatra}[http://www.sinatrarb.com/] framework.
 
 1) Install the gem with the following command
 
@@ -26,7 +26,7 @@ Supported commands:
 
 == Development
 
-Sources can be found on Github[http://github.com/kolo/git-bro].
+Sources can be found on {Github}[http://github.com/kolo/git-bro].
 
 == Authors
 
@@ -34,4 +34,4 @@ Sources can be found on Github[http://github.com/kolo/git-bro].
 
 == Copyright
 
-Copyright (c) 2010 Dmitry Maksimov. See LICENSE[link://files/LICENSE.html] for details.
+Copyright (c) 2010 Dmitry Maksimov. See {LICENSE}[link://files/LICENSE.html] for details.
